# ProteInspector

./: .gitignore  README.md  docker-compose.yml  proteinspector-api.service  run-proteinspector-api.sh
api/: Dockerfile  app.js  binding.gyp  docker-config.json  package-lock.json  package.json
api/src/: app.ts  query-executor.ts
client/: .eslintrc.json  .gitignore  Dockerfile  README.md  angular.json  package-lock.json  package.json  tsconfig.doc.json
client/src/: index.html  styles.scss
database/: Dockerfile  README.md  init.sql
database/benchmarks/: benchmark1.sql  benchmark2.sql  benchmark3.sql  run-benchmark.sh
database/create-db/: README.md  create_batch2.sql  create_batch4.sql  create_batch5.sql  create_indices.sql  create_test_data.sql  delete_batch1.sql  delete_batch2.sql  delete_batch4.sql  delete_indices.sql
database/create_db/: create.sql  create_batch2.sql  create_batch3.sql  create_batch4.sql  create_batch6.sql  create_proteins_sequences.sql  create_test_data.sql  delete.sql  delete_batch2.sql  delete_batch3.sql  delete_batch4.sql  delete_batch5.sql  delete_batch6.sql  delete_test_data.sql  manual.md
database/insert-data/: insert_batch1.py  insert_batch2.py  insert_batch5.py  run-batch1.sh  run-batch2.sh  run-batch3.sh  run-batch4.sh  run-batch5.sh  run-batch6.sh  run-insert-test-data.sh
database/insert_data/: .env  base.py  (+16 more)
documentation/: README.md  api.md  client.md  database.md  query-executor.md
query-executor/: Makefile  config.json  doxygen.conf  metrics.json
query-executor/src/tests/: CMakeLists.txt  run-tests.sh  test.cpp
(+149 files in other folders)
